2015-12-31  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted:  Src/builtin.c: enable WARN_CREATE_GLOBAL for print -v

	* 37468: Src/parse.c: allow line breaks in more places in [[ ... ]]

	* 37467: Doc/Zsh/builtins.yo, Src/builtin.c, Test/B03print.ztst:
	add "print -v var" / "printf -v var"

2015-12-31  Oliver Kiddle  <opk@zsh.org>

	* 37453 (with Bart, started by Baptiste Daroussin, 37315)
	Test/C02cond.ztst: try to improve detection of noatime filesystem

	* users/21114: Completion/Unix/Command/_dig: new completion

2015-12-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 37460: Test/X03zlebindkey.ztst: make sure the default keymap is
	emacs before using that keymap to test bindings

2015-12-31  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: NEWS: Document how to disable paste highlighting.

	* 37456: Src/Zle/zle_refresh.c: Have zle_highlight=(none)
	disable paste highlighting

2015-12-30  Frank Terbeck  <ft@bewatermyfriend.org>

	* 37451: Functions/VCS_Info/vcs_info: vcs_info: Declare "msgs" in
	early context

2015-12-27  Axel Beckert  <abe@deuxchevaux.org>

	* 37438: Completion/Debian/Command/_aptitude: Also parse --help/-h
	output of aptitude 0.7.5 and later.

2015-12-26  Axel Beckert  <abe@deuxchevaux.org>

	* 37436: Felipe Sateler: Completion/Debian/Command/_apt:
	Add missing apt purge and autoremove subcommands.

2015-12-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 37435 (+ fix typo): Src/exec.c: allow execution of empty files
	as "sh" scripts

	* 37434: Src/exec.c: POSIXBUILTINS "command" should prevent shell
	exit on errors from special builtins

2015-12-23  Philip Sequeira  <phsequei@gmail.com>

	* 37345: Functions/VCS_Info/VCS_INFO_maxexports,
	Functions/VCS_Info/VCS_INFO_set: VCS_INFO functions break with
	setopt no_unset

2015-12-19  Barton E. Schaefer  <schaefer@zsh.org>

	* users/21082 (expanded): Functions/Misc/is-at-least: do a more
	complete job of sorting version strings that are not in the form